--- a/Web-Projects/Salary_Calculator/css/style.css
+++ b/Web-Projects/Salary_Calculator/css/style.css
@@ -1,5 +1,17 @@
-body{background: grey;}
+body{background:grey;}
 h1{text-align:center;}
-.day{width:120px;margin-left:410px;display:inline-block;}
-.start-time{margin-right:10px;}
-.end-time{margin-left:10px;margin-right:10px;}
+.head-row{width:700px;border:2px solid black;margin-left:320px;}
+.lday{display:inline-block;width:150px;font-size:20px;color:white;text-align:center;}
+.lstime{display:inline-block;width:150px;font-size:20px;color:white;text-align:center;}
+.ph{display:inline-block;width:200px;font-size:20px;color:white;text-align:center;}
+.letime{display:inline-block;width:150px;font-size:20px;color:white;text-align:center;}
+
+/*
+.day class width is mentioned as they may be of varying width. 
+*/
+
+.day{width:100px;display:inline-block;font-size:20px;color:white;text-align:left;margin-left:320px;}
+.day-hrs{width:50px;height:20px;margin-left:80px;}
+.day-min{width:50px;height:20px;}
+.phbox{margin-left:110px;margin-right:40px;}
+.button{background-color:white;width:200px;height:50px;margin-left:550px;}
